third_party/move/move-compiler-v2/tests/checking/typing/if_branches_subtype_invalid.exp

Diagnostics:
error: cannot adapt `&u64` to annotated type `&mut u64` (mutability mismatch)
  ┌─ tests/checking/typing/if_branches_subtype_invalid.move:3:37
  │
3 │         let _: &mut u64 = if (cond) u else u_mut;
  │                                     ^

error: cannot adapt `&u64` to annotated type `&mut u64` (mutability mismatch)
  ┌─ tests/checking/typing/if_branches_subtype_invalid.move:4:48
  │
4 │         let _: &mut u64 = if (cond) u_mut else u;
  │                                                ^

error: cannot adapt `&u64` to annotated type `&mut u64` (mutability mismatch)
  ┌─ tests/checking/typing/if_branches_subtype_invalid.move:5:37
  │
5 │         let _: &mut u64 = if (cond) u else u;
  │                                     ^

error: cannot adapt `&u64` to annotated type `&mut u64` (mutability mismatch)
  ┌─ tests/checking/typing/if_branches_subtype_invalid.move:5:44
  │
5 │         let _: &mut u64 = if (cond) u else u;
  │                                            ^

error: cannot adapt `&bool` to annotated type `&u64`
  ┌─ tests/checking/typing/if_branches_subtype_invalid.move:9:40
  │
9 │         let _: &u64 = if (cond) u else b;
  │                                        ^

error: cannot adapt `&bool` to annotated type `&u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:10:33
   │
10 │         let _: &u64 = if (cond) b else u;
   │                                 ^

error: cannot adapt `&bool` to annotated type `&u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:12:44
   │
12 │         let _: &u64 = if (cond) u_mut else b;
   │                                            ^

error: cannot adapt `&bool` to annotated type `&u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:13:33
   │
13 │         let _: &u64 = if (cond) b else u_mut;
   │                                 ^

error: cannot adapt `&mut bool` to annotated type `&u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:15:40
   │
15 │         let _: &u64 = if (cond) u else b_mut;
   │                                        ^^^^^

error: cannot adapt `&mut bool` to annotated type `&u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:16:33
   │
16 │         let _: &u64 = if (cond) b_mut else u;
   │                                 ^^^^^

error: cannot adapt `&mut bool` to annotated type `&mut u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:19:48
   │
19 │         let _: &mut u64 = if (cond) u_mut else b_mut;
   │                                                ^^^^^

error: cannot adapt `&mut bool` to annotated type `&mut u64`
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:20:37
   │
20 │         let _: &mut u64 = if (cond) b_mut else u_mut;
   │                                     ^^^^^

error: cannot adapt `(&u64, &u64)` to annotated type `(&mut u64, &mut u64)` (mutability mismatch)
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:25:54
   │
25 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u, u) else (u_mut, u_mut);
   │                                                      ^^^^^^

error: cannot adapt `(&mut u64, &u64)` to annotated type `(&mut u64, &mut u64)` (mutability mismatch)
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:26:54
   │
26 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u_mut, u) else (u, u_mut);
   │                                                      ^^^^^^^^^^

error: cannot adapt `(&u64, &mut u64)` to annotated type `(&mut u64, &mut u64)` (mutability mismatch)
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:26:70
   │
26 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u_mut, u) else (u, u_mut);
   │                                                                      ^^^^^^^^^^

error: cannot adapt `(&u64, &mut u64)` to annotated type `(&mut u64, &mut u64)` (mutability mismatch)
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:27:54
   │
27 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u, u_mut) else (u_mut, u);
   │                                                      ^^^^^^^^^^

error: cannot adapt `(&mut u64, &u64)` to annotated type `(&mut u64, &mut u64)` (mutability mismatch)
   ┌─ tests/checking/typing/if_branches_subtype_invalid.move:27:70
   │
27 │         let (_, _): (&mut u64, &mut u64) = if (cond) (u, u_mut) else (u_mut, u);
   │                                                                      ^^^^^^^^^^
